// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelfareReformDetails connector mapStateToProps generates the correct props 1`] = `
Object {
  "apaStatuses": undefined,
  "arrearsId": undefined,
  "breadcrumb": Array [
    Object {
      "href": "#{Dashboards.Core.CustomerBaseURL}",
      "id": "breadcrumb-dashboard",
      "label": "Dashboard",
    },
    Object {
      "id": "breadcrumb-arrearsDashboard",
      "label": "My arrears",
      "to": "/",
    },
    Object {
      "label": "Arrears details",
      "to": "/arrears-details/undefined",
    },
    Object {
      "id": "breadcrumb-Welfare reform details",
      "label": "Welfare reform details",
    },
  ],
  "heading": "Welfare reform details",
  "hidePropertyInfo": true,
  "labels": Object {
    "backButton": "Back",
    "saveButton": "Save",
  },
  "lastUpdated": undefined,
  "paymentDayError": "Payment day should be between 1 and 31",
  "redirectToDetailsPage": [Function],
  "tenancyId": undefined,
  "ucArrearsPaymentStatuses": undefined,
  "welfareReform": Object {
    "apaStatusDescription": "abc",
    "bedroomTax": false,
    "benefitCap": false,
    "claimStartDate": "2018-12-23T13:30:24.051Z",
    "paymentDay": 0,
    "ucArrearsPaymentStatusDescription": "def",
    "universalCredit": false,
  },
}
`;

exports[`WelfareReformDetails connector mergeProps generates the correct props 1`] = `
Object {
  "apaStatuses": undefined,
  "getOptionSets": [Function],
  "getWelfareReformDetails": [Function],
  "hidePropertyInfo": true,
  "labels": Object {
    "backButton": "Back",
    "saveButton": "Save",
  },
  "lastUpdated": undefined,
  "onBack": [Function],
  "onSubmit": [Function],
  "paymentDayError": "Payment day should be between 1 and 31",
  "tenancyId": undefined,
  "ucArrearsPaymentStatuses": undefined,
  "updatePageHeader": [Function],
  "welfareReform": Object {
    "apaStatusDescription": "abc",
    "bedroomTax": false,
    "benefitCap": false,
    "claimStartDate": "2018-12-23T13:30:24.051Z",
    "paymentDay": 0,
    "ucArrearsPaymentStatusDescription": "def",
    "universalCredit": false,
  },
}
`;
